--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,18 @@
-PRIVATE_KEY=<YOUR_PRIVATE_KEY_HERE>
-ALCHEMY_API_URL=<YOUR_ALCHEMY_API_URL>
-WALLET_ADDRESS=<YOUR_WALLET_ADDRESS>
+
+
+https://eth-rinkeby.alchemyapi.io/v2/3HNglCiTuCHp-DKw_ULaEw_NB6TwZoyA
+
+SDK initialized by address: 0x2Fb4eEa8519Df251A709d372521d11b11f95B9C5
+
+Successfully deployed editionDrop contract, address: 0x5299E816C95c2319D2697A4D73FFEb8Afa32b0E7
+
+✅ Successfully deployed editionDrop contract, address: 0x5299E816C95c2319D2697A4D73FFEb8Afa32b0E7
+✅ editionDrop metadata: {
+  name: 'nuestroDAO Membership',
+  description: 'A DAO for fans of nuestro.',
+  image: 'https://gateway.ipfscdn.io/ipfs/QmfVK5UD7GUZyjoi3Ze4jRdAxfMoGDwekMyJu5GQAuQAVR/0',
+  seller_fee_basis_points: 0,
+  fee_recipient: '0x0000000000000000000000000000000000000000',
+  merkle: {},
+  symbol: ''
+}
